# cpp-lib-collector

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
include/: collector.h  logger.h
include/pkgcollect/: collector.h  registry-collector.h
include/pkgcollect/collectors/: net_collector.h
src/: collector.cpp  net_library.cpp
